# vm-site

./: pyproject.toml
vm_main/: manage.py
vm_main/services/: admin.py  models.py  urls.py  views.py
vm_main/services/migrations/: 0001_initial.py  0002_client_address_building_client_address_city_and_more.py  0003_alter_contract_id.py  0004_alter_contract_id.py  0005_alter_contract_completed_date.py  0006_alter_contract_completed_date.py
vm_main/vm_main/: asgi.py  settings.py  urls.py  wsgi.py
