[tool.poetry]
name = "vm-main"
version = "0.1.0"
description = ""
authors = ["Максим Юрченко <migismigis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
psycopg = "^3.2.1"
pillow = "^10.4.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
